# py-tools

./: .gitignore  README.md  pyproject.toml
docs/: .obsidian  asr_tts_solutions.md  nvidia_cuda_update.md
gesture-control/: README.md  pyproject.toml
gesture-control/src/gesture/: finger.py
speech-input/: README.md  main.py  pyproject.toml
speech-input/src/speech/: main.py
speech_io/: main.py
tests/speech_io/: download_model.py  model  test_faster_whisper_asr.py  test_index_tts.py  test_vosk_file_asr.py  test_vosk_microphone_asr.py
