[project]
name = "py-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cosyvoice>=0.0.8",
    "faster-whisper>=1.1.1",
    "pyaudio>=0.2.14",
    "pynini==2.1.6",
    "speechrecognition[faster-whisper]>=3.14.3",
    "vosk>=0.3.45",
    "wetextprocessing>=1.0.4.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
