[project]
name = ""
version = ""
description = ""
authors = [
    {name = "kwseeker", email = "xiaohuileee@gmail.com"},
]

dependencies = [
    "opencv-python>=4.8.1.78",
    "mediapipe>=0.10.8",
    "numpy>=1.25.2",
]

requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
#start = 'python src/main.py'
start = 'python src/gesture/finger.py'
